--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
 		"noFallthroughCasesInSwitch": true,
 		"paths": {
 			"@/*": ["./src/*"],
-			"components/*": ["./src/components/*"],
-			"pages/*": ["./src/pages/*"]
+			"@components/*": ["./src/components/*"],
+			"@pages/*": ["./src/pages/*"]
 		}
 	},
 
