--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
 			"@/*": ["./src/*"],
 			"@components/*": ["./src/components/*"],
 			"@pages/*": ["./src/pages/*"],
-			"@types/*": ["./src/types/*"]
+			"@types/*": ["./src/types/*"],
+			"@db/*": ["./src/db/*"]
 		}
 	},
 
