--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
+    "@emailjs/browser": "^3.11.0",
     "antd": "^5.8.4",
     "emailjs": "^4.0.2",
     "gsap": "^3.12.2",
