--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
     "@emailjs/browser": "^3.11.0",
+    "@types/uuid": "^9.0.6",
     "antd": "^5.8.4",
     "emailjs": "^4.0.2",
     "gsap": "^3.12.2",
@@ -19,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
-    "sass": "^1.65.1"
+    "sass": "^1.65.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
