--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_BASE_URL=http://gafurov-prod-test.ru/
+VITE_PATH_TO_PORTFOLIO=http://gafurov-prod-test.ru/assets#https://pmkrazvitie.ru/assets/
